[project]
name = "jscrackrecord"
version = "0.1.0"
description = "jscrack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gmssl>=3.2.2",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "pycryptodome>=3.23.0",
    "pyexecjs>=1.5.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
lint = [
    "pre-commit>=4.2.0",
]


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"


[tool.hatch.build.targets.wheel]
packages = ["src"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

